objects/BMCServiceDesk__CMDB_Attribute_Source_Precedence__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__ApplyAllClasses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply to All Classes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMDB Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>CMDB Attribute Source Precedence</relationshipLabel>
        <relationshipName>CMDB_Attribute_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldName__c</fullName>
        <label>Field Api Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SourcePrecedence__c</fullName>
        <label>Source Precedence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CMDB Attribute Source Precedence</label>
    <nameField>
        <label>CMDB Attribute Source Precedence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMDB Attribute Source Precedence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>